# vergence-control

./: CMakeLists.txt  LICENCE  README.md  VergenceControlConfig.cmake.in
data/: Gt43B0.0208f0.063ph7.ini
icub/: CMakeLists.txt  README.md  desktop.ini  main.cpp
icub/apps/: app-icubsim-system.xml
icub/icub-vergence-control/: CMakeLists.txt  main.cpp
icub/icubsim-screen-handler/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/include/VergenceControl/: VergenceControl.h
src/include/VergenceControl/private/: ini.h
src/src/: INIReader.cpp  VergenceControl.cpp  ini.cpp
test/: CMakeLists.txt  main.cpp
